<resources>
    <string name="app_name">My Hiking Journal</string>
    <string name="edit_message">Enter your name</string>
    <string name="button_send">Submit</string>
    <string name="textview">Welcome to the Name Entry App.\nHit the back button to
        enter another name.</string>
    <string name="title_activity_display_about">DisplayAbout</string>
    <string name="action_about">About</string>
    <string name="action_home">Home</string>
    <string name="action_hike">Hike List</string>


    <!-- About page -->
    <string name="about_header">About</string>
    <string name="about_title1">Welcome to My Hiking Journal,</string>
    <string name="about_text">This application is meant to be a digital gallery of Washington State
        Hikes, while also allowing a user to keep a journal of their adventures. While the
        application is in its early development, here are the overall goals of the
        application.</string>
    <string name="about_title2">Goals:</string>
    <string name="about_goals">1. Have a database of Washington state hikes for user to view.
        \n2. Allow users to add a hike to their journal.
        \n3. Allow users to use camera to document a hike.
        \n4. Use gps to track distance and record exact route.</string>
    <string name="hike_tip_title">Hiking 101</string>
    <string name="tip_message_1">Wear well-fitting and broken-in hiking boots to avoid discomfort and injury.</string>
    <string name="wifi_connected">Wifi Connected</string>
    <string name="lost_connection">Connection Lost</string>

    <!-- PREFRENCES -->
    <string name="TBD">Coming Soon...</string>
    <!-- Network Prefrences -->
    <string name="pref_network_title">Network</string>
    <string name="pref_wifi_only">WIFI Only</string>
    <string name="pref_wifi_only_summ">Use wifi only when using network connections</string>
    <string name="pref_all_networks">Phone network and WIFI</string>
    <string name="pref_all_networks_summ">Use phone network with WIFI is not available.</string>
    <string name="lblSettings">Settings</string>
    <string name="network_connection">Network Connection</string>
    <string name="connection_not_found">No connection found, please enable WIFI or Mobile network.</string>
    <string name="title_activity_my_location">Map</string>
    <string name="mapLat">Latitude</string>
    <string name="mapLon">Longitude</string>
    <string name="mapLocation">Location</string>
    <string name="address_found">Address Found</string>
    <string name="no_location_data">No Location Data</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Latitude or Longitude Used</string>
    <string name="no_address_found">Address Not Found</string>

</resources>
