<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brysongood.myapp.DisplayAbout">

    <include
        layout="@layout/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:id="@+id/include" />

    <TextView
        android:id="@+id/about_title1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:text="@string/about_title1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/about_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_title1"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:ems="10"
        android:text="@string/about_title2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/about_text"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/goals_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/about_goals"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

</android.support.constraint.ConstraintLayout>
