<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brysongood.myapp.DisplayAbout">

    <include
        layout="@layout/toolbar1"
        android:layout_width="395dp"
        android:layout_height="56dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:id="@+id/include" />

    <RelativeLayout
        android:id="@+id/mapLatLabel"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/mapLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/mapLat"
            app:layout_constraintLeft_toLeftOf="@+id/parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mapLon" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mapLatValue"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mapLatLabel"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/mLatValue"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="TextView" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mapLonLabel"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapLatLabel">

        <TextView
            android:id="@+id/mapLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/mapLon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mapLonValue"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mapLonLabel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mapLatValue"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/mLonValue"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="TextView" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mapLocationLabel"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapLonLabel">

        <TextView
            android:id="@+id/mapLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/mapLocation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mapLocationValue"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mapLocationLabel"
        app:layout_constraintTop_toBottomOf="@+id/mapLonValue"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/mLocValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="TextView" />

    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.brysongood.myapp.activityMyLocation"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mapLocationValue" />

</android.support.constraint.ConstraintLayout>


